--- a/index.html
+++ b/index.html
@@ -144,10 +144,11 @@
 					<h2>My Resume</h2>
 				</div>
 			</div>
-			
+			-->
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline">
+						<!--
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Work Experience</h3></div>
 						</li>
@@ -201,7 +202,7 @@
 								</div>
 							</div>
 						</li>
--->
+						-->
 						<br>
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
@@ -324,7 +325,7 @@
 							</div>
 						</div>
 					</div>
-
+				<!--
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
@@ -342,7 +343,7 @@
 					</div>
 
 
-					<!-- <div class="col-md-4 text-center">
+					 <div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
 								<ion-icon style="color:red;height: 60px;width: 60px;padding-top: 18px;" name="analytics-outline"></ion-icon>
@@ -355,7 +356,7 @@
 								</p>
 							</div>
 						</div>
-					</div> -->
+					</div> 
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
@@ -387,7 +388,7 @@
 						</div>
 					</div>
 
-					
+					-->
 				</div>
 				</div>
 			</div>
