--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
 			<!--
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>My Resume</h2>
+					<h2>Education</h2>
 				</div>
 			</div>
 			-->
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline">
-						<!--
+					<!--
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Work Experience</h3></div>
 						</li>
@@ -203,7 +203,7 @@
 							</div>
 						</li>
 						-->
-						<br>
+						
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
 						</li>
